--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,8 @@
             android:id="@+id/textViewId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="North, East, South, West" />
+            android:saveEnabled="false"
+            android:hint="North East South West" />
 
         <Button
             android:id="@+id/navigateButtonId"
